# evals

./: .gitignore  README.md  ai_fastapi.py  lint.sh  pyproject.toml  pyrightconfig.json  qrels.jsonl  retrieval_tasks.txt  ruff.toml  tasks.txt
.github/workflows/: lint.yml
evals/: ai.py  ai_rerank.py  ai_vllm.py  common.py  elo.py  rerank_pairwise.py  run_embeddings.py  run_ingestors.py  run_ndcg.py  run_pipeline.py  run_recall.py  run_rerankers.py  test.py  test_rerank_comparison.py  test_vllm.py  types.py  utils.py
evals/datasets/: common.py  run_embeddings_extended.py  run_ingestors.py  run_ndcg.py  run_rerankers.py
evals/ingestors/: airbnb.py  bioasq.py  common.py  cosqa.py  curev1.py  enronqa.py  financebench.py  finqabench.py  fiqa.py  ineqs.py  leetcode_multi.py  master_legal_ingestion.py  master_mair_ingestion.py  master_mt_rag_ingestor.py  master_mteb_ingestion.py  mbpp.py  meeting.py  msmarco.py  narrativeqa.py  pandas.py  pandas_documentation.py  qmsum.py  quora.py  quora_swedish.py  stackoverflowqa.py
evals/models/: embedding.py
evals/ndcg/: all_model_eval.py  analyze_evals.py  dataset_ingestion.py  eval_to_save.py  eval_w_embedding.py  generate_embeddings.py  run_reranker.py  zeroentropy_eval.py
evals/scraping/: analyzer.py  build_airbnb_dataset.py  convo_generation.py  make_corpus.py
open_evals/: ai.py  common.py  run_embeddings.py  run_ingestors.py  run_ndcg.py  run_pipeline.py  run_rerankers.py
open_evals/ingestors/: bioasq.py  common.py  cosqa.py  curev1.py  financebench.py  finqabench.py  fiqa.py  ineqs.py  leetcode_multi.py  mbpp.py  (+10 more)
(+15 files in other folders)
